[package]
name = "html-editor-cli"
version = "0.1.0"
edition = "2021"
description = "A command line tool to edit HTML files"
license = "Apache-2.0"
authors = ["Mo Prosper <mothepro>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
html_editor = "0.6.1"
